crates/nash-parse/src/snapshots/nash_parse__type___tests__type_variable_application.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n'f 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: VarApp {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 3,
            },
        },
        name: "f",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
    },
}
